--- a/landingpageoasis.html
+++ b/landingpageoasis.html
@@ -6,7 +6,7 @@
 	<title>Branch|Office Furniture</title>
 	<link rel="icon" type="image/x-icon" href="https://media.licdn.com/dms/image/C4D0BAQHdo_36m9UvJw/company-logo_200_200/0/1630573524922/branchfurniture_logo?e=2147483647&v=beta&t=0IRCH2l8nyGT3EmwE_pK-T1VF1bF8qjtjPNrTQaz3ik">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	<link rel="stylesheet" type="text/css" href="/landingpageoasis.css">
+	<link rel="stylesheet" type="text/css" href="landingpageoasis.css">
 </head>
 <body>
 	<div class="container">
